# COURSE_PRJCT_TKI_341_2026

./: README.md  pyproject.toml  start.py
api/: access_api.py  admin_api.py  monitor_api.py
barrier-system/: .env.example  Dockerfile  Makefile  README.md
barrier-system/api/: operator_api.py
barrier-system/communication/: command_result.py  event.py  messages.py  request.py  responses.py
barrier-system/config/: permissions.py  settings.py
barrier-system/devices/: __init__.py
barrier-system/entities/: access_request.py  access_session.py  administrator.py  barrier_state.py  device.py  monitor_interface.py  operator.py  policy_result.py  policy_rule.py  reader_state.py  security_event.py  severity.py
barrier-system/interfaces/: access_controller_interface.py  audit_interface.py  authentication_interface.py  crypto_interface.py  device_interface.py  event_handler_interface.py  policy_interface.py  session_interface.py
barrier-system/security/: __init__.py  authentication.py  integrity.py  session.py
barrier-system/tests/: test_devices.py  test_integration.py  test_policy_engine.py
communication/: __init__.py  channel.py  commands.py  protocol.py  response.py
config/: security.py
entities/: __init__.py  access_decision.py  audit_record.py  commands.py  direction.py  responses.py  rfid_card.py  security_event_type.py  user.py
interfaces/: access_repository_interface.py  authorization_interface.py  barrier_interface.py  monitor_interface.py  reader_interface.py
security/: authorization.py  crypto.py
tests/: test_access_controller.py  test_api.py
(+45 files in other folders)
